# eja-website

./: README.md  index.html  main.py  pyproject.toml
output/: ejc_map.html
resources/: colors.json  list_of_ejcs.csv
