[tool.poetry]
name = "ejc-map"
version = "0.1.0"
description = ""
authors = ["Daniel Beiter <daniel.beiter@gmx.at>"]
readme = "README.md"
packages = [{include = "ejc_map", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
plotly = "^5.24.1"
kaleido = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
